[package]
name = "drip"
version = "1.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.0-pre.3"
near-non-transferrable-token = { path = "../near-non-transferrable-token/near-non-transferrable-token", version = "=0.0.0"}