[package]
name = "drip"
version = "1.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.0-pre.3"
near-non-transferable-token = { path = "../near-non-transferable-token/near-non-transferable-token", version = "0.0.5" }